Fixed scrollbars on modo tab

--- a/site/public/css/modo.css
+++ b/site/public/css/modo.css
@@ -6,6 +6,11 @@ body {
     font-family: 'Codec Pro';
 }
 
+p::-webkit-scrollbar, li::-webkit-scrollbar {
+    color: aliceblue;
+    display: none;
+}
+
 h2 {
     color: antiquewhite;
     margin-bottom: 50px;
